--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Movies</string>
     <string name="search_hint">Поиск по названию фильма</string>
-    <string name="net_error">Нам не удалось обработать ваш запрос.\nПопробуйте еще раз</string>
+    <string name="net_error">Нам не удалось обработать ваш запрос.\nПопробуйте ещё раз</string>
 </resources>
